# COMP4026-MSc-Projects

./: README.md
boxoban/: Cargo.toml  boxoban.pyd
boxoban-environment/: .gitignore  boxoban_environment.py
boxoban-js/: package-lock.json  package.json
boxoban-level-collection/: .gitignore  Cargo.toml  build.rs
boxoban-level-collection/levels/: 000.txt  001.txt  002.txt  003.txt  004.txt  007.txt  008.txt  009.txt  010.txt  012.txt  015.txt  019.txt  020.txt  023.txt  026.txt  029.txt  030.txt  032.txt  033.txt  034.txt  038.txt  044.txt  045.txt  048.txt  050.txt  052.txt  058.txt  059.txt  060.txt  062.txt  064.txt  065.txt  068.txt  071.txt  074.txt  075.txt  079.txt  080.txt  081.txt  082.txt  (+462 more)
boxoban-level-collection/src/: level.rs  lib.rs
boxoban-level-collection/tests/: boxoban_env.py  boxoban_level_collection.pyd  test_collection.py
boxoban-level-collection/tests/gym-sokoban/gym_sokoban/envs/: boxoban_env.py
boxoban-level-collection/tests/gym_sokoban/envs/: boxoban_env.py
boxoban-level-generator/: .gitignore  Cargo.toml
curriculum-learning/: .gitignore  PPO.py  baseline.py  baseline_independent_collection.py  boxoban_environment.py  ppo.py  ppo_convlstm.py  ppo_convlstm_stacked.py  ppo_curriculum.py  ppo_lstm.py  ppo_lstm_combine_observation.py  ppo_lstm_curriculum.py  ppo_lstm_resnet.py  ppo_lstm_stacked.py  ppo_lstm_truncated.py  ppo_resnet.py  ppo_resnet_pro.py  test.py  train.sh
environment/: app.py  check_trajectory.py
hierarchical/: .gitignore  a2c.py  a2c_lstm.py  feudal_network.py
imitation/: .gitignore  build.py  gail.py  (+1 more)
(+533 files in other folders)
