[package]
name = "boxoban-level-collection"
version = "0.1.0"
edition = "2018"

[lib]
name = "boxoban_level_collection"
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.4"
fxhash = "0.2.1"
ndarray = { version = "0.15.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.8.0"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
numpy = "0.13.2"

[build-dependencies]
rand = "0.8.4"
fxhash = "0.2.1"
ndarray = { version = "0.15.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"

